--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bdgarantias
 spring.datasource.username=root
 spring.datasource.password=TylerDurden##
 spring.jpa.hibernate.ddl-auto=update
+
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=20000KB
+# Max Request Size
+spring.servlet.multipart.max-request-size=20000KB
+
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=C:\\Files\\
